# mydocs2

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.ui  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
.claude/agents/: backend-dev.md  cli-tester.md  doc-updater.md  frontend-dev.md  spec-reviewer.md  test-runner.md
.github/workflows/: deploy-aks.yml
config/: parser.yml
deploy/: nginx.conf
deploy/k8s/: backend-deployment.yml  ingress.yml  namespace.yml  secret.yml  ui-deployment.yml
docs/: BACKEND.md  CLI.md  EXTRACTING.md  INFRA_DEPLOYMENT.md  UI.md
docs/archive/: UI_element_annotations.md  ui_element_anotations_plan.md
docs/brainstorming/: 20260307_01_multitenant_e2e_encryption.md  20260307_02_consumer_product_eu_trust.md
docs/claude_plans_archive/: 20260307_01_search_result_subdoc_view.md
docs/specs/: UI-revamp-options.md  UI.md  backend.md  cli.md  extracting-engine.md  infrastructure.md  migrations.md  parsing-engine.md  retrieval-engine.md  sync.md
migrations/: 001_fulltext_documents.py  002_fulltext_pages.py  003_vector_pages_large_dot.py
mydocs/: config.py  models.py
mydocs-ui/: env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
mydocs-ui/src/: App.vue  main.ts
mydocs/backend/: __init__.py  app.py  auth.py  dependencies.py
mydocs/cli/: formatters.py  main.py
mydocs/common/: base_config.py  migrations.py
mydocs/extracting/: __init__.py  context.py  enrichment.py  exceptions.py  extractor.py  models.py  prompt_utils.py  registry.py  retrievers.py  splitter.py  target_objects.py
mydocs/parsing/: base_parser.py  cache.py  config.py  models.py  pipeline.py
mydocs/retrieval/: __init__.py  embeddings.py  fulltext_retriever.py  hybrid.py  models.py  search.py  vector_retriever.py
mydocs/sync/: __init__.py  migrator.py  (+4 more)
notebooks/: 002_test_split_classify.ipynb  003_test_receipts.ipynb
requests/: cases.http  documents.http  extract.http  health.http  ingest.http  parse.http  search.http  tags.http
(+149 files in other folders)
